--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/genomelab
-spring.datasource.url=jdbc:mysql://genomelab.c4dodpmnm9nq.us-east-1.rds.amazonaws.com:3306/genomelab
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/genomelab
+#spring.datasource.url=jdbc:mysql://genomelab.c4dodpmnm9nq.us-east-1.rds.amazonaws.com:3306/genomelab
 spring.datasource.username=root
-spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=pass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
