--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "p5": "^1.9.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.23.6",
