--- a/backend_simulation/public/config.json
+++ b/backend_simulation/public/config.json
@@ -3,5 +3,6 @@
     "GENERATION_COUNT": 1,
     "FOOD_COUNT": 200,
     "ELITE_COUNT": 10,
-    "STEPS_PER_GENERATION": 500
+    "STEPS_PER_GENERATION": 500,
+    "LOAD_FROM_FILE": 0
 }
