--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/genomelab
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/genomelab?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 #spring.datasource.url=jdbc:mysql://genomelab.c4dodpmnm9nq.us-east-1.rds.amazonaws.com:3306/genomelab
 spring.datasource.username=root
 spring.datasource.password=
